# archetype

./: .gitignore  README.md  init_python_project.sh  main.py
c++/: CMakeLists.apps.txt  CMakeLists.src.txt  CMakeLists.tests.txt  CMakeLists.txt  Makefile  Readme.md  c++_archetype.sh  clang-format  clang-tidy  conanfile.txt  conanprofile  gitignore  main.cpp
python/: MIT-LICENSE  Makefile  init_python_project.sh  pyproject.toml  python_archetype.sh
rust/: rust_archetype.sh
rust/directory-struc/: .gitignore  Cargo.toml  Makefile  cargo-generate.toml
rust/directory-struc/src/: lib.rs  main.rs
