[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["Toufik Saouchi <toufik.saouchi@gmail.com>"]
edition = "2021"
description = ""
license = "MIT"
readme = "README.md"
homepage = "https://???"
repository = "https://???"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "gzip"] }

# Database
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls", "macros"] }

# Serialization formats
rmp-serde = "1.3"

# Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Numerical computing
ndarray = "0.16"

# Environment variables
dotenvy = "0.15"

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
assert_cmd = "2.0"

[features]
default = ["postgres"]
postgres = ["sqlx/postgres"]

[package.metadata.rustfmt]
max_width = 100
edition = "2021"
